--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "@material-ui/core": "^4.4.3",
     "babel-preset-react-app": "^9.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
