--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "@crestron/ch5-crcomlib": "^0.1.0",
     "@material-ui/core": "^4.4.3",
     "babel-preset-react-app": "^9.0.2",
     "react": "^16.9.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "rebass": "^4.0.6",
+    "rimraf": "^3.0.0",
     "styled": "^1.0.0"
   }
 }
