Wires in CH-5 lib, adds test page

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:manifest": "cp -R ./appui ./build/appui",
+    "copy:manifest": "cp -R ./appui ./build/appui",
     "build:archive": "ch5-cli archive -p c3-home -d ./build -o ./archive",
     "build:deploy": "ch5-cli deploy -H 192.168.16.221 -t touchscreen archive/c3-home.ch5z",
-    "build:all": "npm run build:manifest && npm run build:archive && npm run build:deploy",
+    "build:all": "npm run copy:manifest && npm run build:archive && npm run build:deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
