--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "homepage": "./",
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "@chakra-ui/core": "^0.7.0",
     "@crestron/ch5-crcomlib": "^0.1.1",
     "@crestron/ch5-utilities-cli": "0.0.6",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.4.3",
     "babel-preset-react-app": "^9.0.2",
+    "emotion-theming": "^10.0.27",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
